Fixed spacing on messages

--- a/nbmessage_board/static/css/nbmessage-board.css
+++ b/nbmessage_board/static/css/nbmessage-board.css
@@ -1,6 +1,7 @@
-.main-border {
+.nbmessage-border {
     border-bottom: 1px solid #e2e2e2;
     padding-bottom: .5em;
+    margin-bottom: 1em;
 }
 
 .user-fmt {
